--- a/.env
+++ b/.env
@@ -2,6 +2,6 @@ ATLAS_URI = mongodb+srv://groupsocial999:CHRISTINE44@ddautoja.cnhodcl.mongodb.ne
 COOKIE_EXPIRES_IN = 120d
 JWTPRIVATEKEY = vfehjfbefjndf
 JWT_EXPIRES_IN = 120d
-NODE_ENV = development
+NODE_ENV = production
 SALT = 10
 PORT = 6969
