--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+    "linter": "eslint ./",
+    "start": "nodemon server",
+    "dev": "nodemon server"
   },
   "keywords": [],
   "author": "",
