--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "linter": "eslint ./",
-    "start": "nodemon server",
-    "--omit=dev": "nodemon server"
+    //"linter": "eslint ./",
+  //  "start": "nodemon server",
+   // "--omit=dev": "nodemon server"
   },
   "keywords": [],
   "author": "",
