--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "ddautojs-backend",
   "version": "1.0.0",
   "description": "",
+  "main": "index.js",
+  "scripts": {
+    "start": "nodemon server"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
