--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-ATLAS_URI = mongodb+srv://groupsocial999:CHRISTINE44@ddautoja.cnhodcl.mongodb.net/test
+ATLAS_URI = mongodb+srv://groupsocial999:CHRISTINE44@ddautoja.cnhodcl.mongodb.net/?retryWrites=true&w=majority
 COOKIE_EXPIRES_IN = 120d
 JWTPRIVATEKEY = vfehjfbefjndf
 JWT_EXPIRES_IN = 120d
